--- a/testapp/templates/testapp/base.html
+++ b/testapp/templates/testapp/base.html
@@ -11,7 +11,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
     <div class="container">
-         <a class="navbar-brand" href="/home">Asif School Of Decisions</a>
+         <a class="navbar-brand" href="/home">Rahul School Of Decisions</a>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
         <a class="nav-link" href="/home">Home </a>
