--- a/testapp/templates/testapp/home.html
+++ b/testapp/templates/testapp/home.html
@@ -3,7 +3,7 @@
 {% block body_block%}
 <div class="jumbotron">
     <div class="container">
-        <h1> Wecome To Asif School Of Decisions</h1>
+        <h1> Wecome To Rahul School Of Decisions</h1>
         <h2> Rules:</h2>
         <ul>
             <li> Rule1:You shall Write One Exam per Day</li>
