--- a/testapp/templates/testapp/home.html
+++ b/testapp/templates/testapp/home.html
@@ -6,7 +6,7 @@
         <h1> Wecome To Rahul School Of Decisions</h1>
         <h2> Rules:</h2>
         <ul>
-            <li> Rule1:You shall Write One Exam per Day</li>
+            <li> Sunday is a holiday</li>
             <li> Rule1:You shall Write One Exam per Day</li>
             <li> Rule1:You shall Write One Exam per Day</li>
             <li> Rule1:You shall Write One Exam per Day</li>
